// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shallow Snapshot Tests basic 1`] = `
<div
  className="wrapper"
>
  <Image
    alt="alt-text"
    height="full"
    onClick={[MockFunction]}
    src="image-data"
    width="full"
  />
  <div
    className="delete-button"
    onClick={[MockFunction]}
  >
    <ForwardRef(IconButton)
      aria-label="delete"
      color="inherit"
    >
      <Memo(ForwardRef(CloseIcon)) />
    </ForwardRef(IconButton)>
  </div>
</div>
`;

exports[`Shallow Snapshot Tests height 1`] = `
<div
  className="wrapper height-full"
>
  <Image
    alt="alt-text"
    height="full"
    onClick={[MockFunction]}
    src="image-data"
    width="full"
  />
  <div
    className="delete-button"
    onClick={[MockFunction]}
  >
    <ForwardRef(IconButton)
      aria-label="delete"
      color="inherit"
    >
      <Memo(ForwardRef(CloseIcon)) />
    </ForwardRef(IconButton)>
  </div>
</div>
`;

exports[`Shallow Snapshot Tests width 1`] = `
<div
  className="wrapper width-full"
>
  <Image
    alt="alt-text"
    height="full"
    onClick={[MockFunction]}
    src="image-data"
    width="full"
  />
  <div
    className="delete-button"
    onClick={[MockFunction]}
  >
    <ForwardRef(IconButton)
      aria-label="delete"
      color="inherit"
    >
      <Memo(ForwardRef(CloseIcon)) />
    </ForwardRef(IconButton)>
  </div>
</div>
`;
